# ClipPoster

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.vue  router.ts  store.ts
src-tauri/: Cargo.toml  error.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/: main.css  tailwind.css
src/components/: InfoTip.vue  SidebarItem.vue
src/views/: ClipsView.vue  Settings.vue
