[package]
name = "app"
version = "0.1.0"
description = "Administrative-verwaltung-meinwache"
authors = ["Sarocesch"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
thiserror = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
ftp = "3"
suppaftp = { version = "5.3", features = ["async", "async-default-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util", "compat"] }
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }
futures-util = "0.3"
ureq = { version = "2", features = ["tls"] }
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
urlencoding = "2"
git2 = { version = "0.18", default-features = false, features = ["https"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pathdiff = "0.2"
which = "6"
ltc = "0.2"
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
clipboard-win = "5"
local-ip-address = "0.6"
once_cell = "1"
rcgen = "0.13"
rustls = "0.21"
axum-server = { version = "0.6", features = ["tls-rustls"] }
